{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 18,
  "lineage": "98a1fc4d-1b30-1bca-060e-ab9f5021da44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf5352a1f6f7883f",
            "arn": "arn:aws:ec2:us-east-1:047612974098:elastic-ip/eipalloc-0bf5352a1f6f7883f",
            "association_id": "eipassoc-0fe3ab5b17a5476a7",
            "domain": "vpc",
            "id": "eipalloc-0bf5352a1f6f7883f",
            "instance": "i-0361ea34219f935e0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01c8474120a39c4f4",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-107-21-212-161.compute-1.amazonaws.com",
            "public_ip": "107.21.212.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-homelab-eip",
              "Project": "devops-homelab"
            },
            "tags_all": {
              "Name": "devops-homelab-eip",
              "Project": "devops-homelab"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.main",
            "aws_key_pair.main",
            "aws_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-046b36f55e189564a",
            "arn": "arn:aws:ec2:us-east-1:047612974098:instance/i-0361ea34219f935e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0361ea34219f935e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-homelab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c8474120a39c4f4",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "public_dns": "ec2-107-21-212-161.compute-1.amazonaws.com",
            "public_ip": "107.21.212.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d786130fd3a69339",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8a1f62ff46746f6",
            "tags": {
              "Name": "devops-homelab-server",
              "Project": "devops-homelab"
            },
            "tags_all": {
              "Name": "devops-homelab-server",
              "Project": "devops-homelab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bfe251d3d110dab"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047612974098:internet-gateway/igw-0732d207a981f6c5b",
            "id": "igw-0732d207a981f6c5b",
            "owner_id": "047612974098",
            "tags": {
              "Name": "devops-homelab-igw",
              "Project": "devops-homelab"
            },
            "tags_all": {
              "Name": "devops-homelab-igw",
              "Project": "devops-homelab"
            },
            "vpc_id": "vpc-029479c44c5e9563e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047612974098:route-table/rtb-08ad8de8dbbacb60e",
            "id": "rtb-08ad8de8dbbacb60e",
            "owner_id": "047612974098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0732d207a981f6c5b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-homelab-rt",
              "Project": "devops-homelab"
            },
            "tags_all": {
              "Name": "devops-homelab-rt",
              "Project": "devops-homelab"
            },
            "timeouts": null,
            "vpc_id": "vpc-029479c44c5e9563e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca2156816f715861",
            "route_table_id": "rtb-08ad8de8dbbacb60e",
            "subnet_id": "subnet-0b8a1f62ff46746f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047612974098:security-group/sg-02bfe251d3d110dab",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bfe251d3d110dab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-homelab-sg",
            "name_prefix": "",
            "owner_id": "047612974098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-homelab-sg",
              "Project": "devops-homelab"
            },
            "tags_all": {
              "Name": "devops-homelab-sg",
              "Project": "devops-homelab"
            },
            "timeouts": null,
            "vpc_id": "vpc-029479c44c5e9563e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047612974098:subnet/subnet-0b8a1f62ff46746f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8a1f62ff46746f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047612974098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-homelab-subnet",
              "Project": "devops-homelab"
            },
            "tags_all": {
              "Name": "devops-homelab-subnet",
              "Project": "devops-homelab"
            },
            "vpc_id": "vpc-029479c44c5e9563e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047612974098:vpc/vpc-029479c44c5e9563e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b9d21e9ff0b29c9",
            "default_route_table_id": "rtb-01a822c5dae955139",
            "default_security_group_id": "sg-048eff593ec6f23fb",
            "dhcp_options_id": "dopt-072b3b9e74fed3f3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029479c44c5e9563e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a822c5dae955139",
            "owner_id": "047612974098",
            "tags": {
              "Name": "devops-homelab-vpc",
              "Project": "devops-homelab"
            },
            "tags_all": {
              "Name": "devops-homelab-vpc",
              "Project": "devops-homelab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}